--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: php
 php:
-  - 5.4
   - 5.5
   - 5.6
   - 7.0
@@ -9,6 +8,7 @@ php:
 # optionally set up exclutions and allowed failures in the matrix
 matrix:
   allow_failures:
+    - php: 5.4
     - php: 7.0
     - php: hhvm
 script: vendor/bin/phpunit --configuration ./phpunit.xml --coverage-text --verbose
